some Logic 💀