@@ -1,14 +1,20 @@
 package com.toda.todo.service;
 
 import com.toda.todo.error.exception.BusinessException;
+import com.toda.todo.mapper.TodoMapper;
 import com.toda.todo.model.dto.generated.*;
 import com.toda.todo.repository.entity.Todo;
 import com.toda.todo.repository.entity.TodoDetails;
 import com.toda.todo.repository.jpa.TodoRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
+
+import java.time.OffsetDateTime;
 import java.util.Date;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 import static com.toda.todo.model.enums.TaskErrors.Task_NOT_FOUND;
@@ -18,15 +24,16 @@ import static com.toda.todo.model.enums.TaskErrors.Task_NOT_FOUND;
 public class TodoServiceImpl implements TodoService {
 
     private final TodoRepository todoRepository;
-//    private final TodoMapper todoMapper; // optional mapping if needed later
+    private final TodoMapper todoMapper;
 
     @Override
-    public Long createTask(CreateTodoDTO createTodoDTO) {
+    public Long createTodo(CreateTodoDTO createTodoDTO) {
+        Long userId = (Long) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+
         Todo todo = new Todo();
         TodoDetails todoDetails = new TodoDetails();
-
         todo.setTitle(createTodoDTO.getTitle());
-        todo.setCreatedById(createTodoDTO.getUserId());
+        todo.setCreatedById(userId);
         todoDetails.setDescription(createTodoDTO.getDescription());
         todoDetails.setPriority(createTodoDTO.getPriority());
         todoDetails.setStatus(createTodoDTO.getStatus());
@@ -38,69 +45,88 @@ public class TodoServiceImpl implements TodoService {
     }
 
     @Override
-    public TodoVTO updateTask(Long taskId, UpdateTodoDTO updateTodoDTO) {
-        Todo todo = todoRepository.findById(taskId)
+    public TodoVTO updateTodo(Long todoId, UpdateTodoDTO updateTodoDTO) {
+        Todo todo = todoRepository.findById(todoId)
                 .orElseThrow(() -> new BusinessException(Task_NOT_FOUND));
+        Long userId = (Long) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+        if (!todo.getCreatedById().equals(userId)) {
+            throw new BusinessException(Task_NOT_FOUND);
+        }
+
         todo.setTitle(updateTodoDTO.getTitle());
-        TodoDetails todoDetails = todo.getDetails() != null ? todo.getDetails() : new TodoDetails();
+        TodoDetails todoDetails = Optional.ofNullable(todo.getDetails()).orElseGet(TodoDetails::new);
         todoDetails.setDescription(updateTodoDTO.getDescription());
         todoDetails.setPriority(updateTodoDTO.getPriority());
         todoDetails.setStatus(updateTodoDTO.getStatus());
         todo.setDetails(todoDetails);
+
         todoRepository.save(todo);
-        return buildTodoVTO(todo);
+        return todoMapper.toTodoVTO(todo);
     }
 
     @Override
-    public void deleteTask(Long taskId) {
+    public void deleteTodo(Long taskId) {
+        Long userId = (Long) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
         Todo todo = todoRepository.findById(taskId)
                 .orElseThrow(() -> new BusinessException(Task_NOT_FOUND));
-        todoRepository.delete(todo);
+        if (todo.getCreatedById().equals(userId)) {
+            todoRepository.delete(todo);
+        } else {
+            throw new BusinessException(Task_NOT_FOUND);
+        }
     }
 
     @Override
-    public TodoVTO getTaskById(Long todoId) {
+    public TodoVTO getTodoById(Long todoId) {
+        Long userId = (Long) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
         Todo todo = todoRepository.findById(todoId)
                 .orElseThrow(() -> new BusinessException(Task_NOT_FOUND));
-        return buildTodoVTO(todo);
+        if (!todo.getCreatedById().equals(userId)) {
+            throw new BusinessException(Task_NOT_FOUND);
+        }
+        return todoMapper.toTodoVTO(todo);
     }
 
     @Override
-    public List<TodoVTO> getAllTasks() {
-        List<Todo> todos = todoRepository.findAll();
-        return todos.stream().map(this::buildTodoVTO).collect(Collectors.toList());
+    public List<TodoVTO> getAllTodo() {
+        Long userId = (Long) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+        return todoRepository.findAll().stream()
+                .map(todoMapper::toTodoVTO)
+                .filter(todoVTO -> todoVTO.getCreatedById().equals(userId))
+                .collect(Collectors.toList());
     }
 
     @Override
     public TodoResultSet getBySearch(String title, String description, Priority priority, Status status,
                                      Integer pageNum, Integer pageSize) {
-        List<Todo> todos = todoRepository.findAll();
+        Long userId = (Long) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+        List<Todo> todos = todoRepository.findAll().stream()
+                .filter(todo -> todo.getCreatedById().equals(userId))
+                .collect(Collectors.toList());
 
-        // Apply filters
         List<Todo> filtered = todos.stream()
-                .filter(todo -> title == null || todo.getTitle().toLowerCase().contains(title.toLowerCase()))
+                .filter(todo -> title == null || (todo.getTitle() != null && todo.getTitle().toLowerCase().contains(title.toLowerCase())))
                 .filter(todo -> description == null || (todo.getDetails() != null &&
-                        todo.getDetails().getDescription() != null &&
-                        todo.getDetails().getDescription().toLowerCase().contains(description.toLowerCase())))
+                        Optional.ofNullable(todo.getDetails().getDescription())
+                                .map(desc -> desc != null && desc.toLowerCase().contains(description.toLowerCase()))
+                                .orElse(false)))
                 .filter(todo -> priority == null || (todo.getDetails() != null &&
                         priority.equals(todo.getDetails().getPriority())))
                 .filter(todo -> status == null || (todo.getDetails() != null &&
                         status.equals(todo.getDetails().getStatus())))
-                .toList();
+                .collect(Collectors.toList());
 
-        // Pagination logic
         int total = filtered.size();
-        int page = pageNum != null ? pageNum : 0;
-        int size = pageSize != null ? pageSize : total;
+        int page = Optional.ofNullable(pageNum).orElse(0);
+        int size = Optional.ofNullable(pageSize).orElse(total);
 
         int fromIndex = Math.min(page * size, total);
         int toIndex = Math.min(fromIndex + size, total);
 
         List<TodoVTO> pagedData = filtered.subList(fromIndex, toIndex).stream()
-                .map(this::buildTodoVTO)
-                .toList();
+                .map(todoMapper::toTodoVTO)
+                .collect(Collectors.toList());
 
-        // Build result set
         TodoResultSet resultSet = new TodoResultSet();
         resultSet.setData(pagedData);
         resultSet.setPageNum(page);
@@ -108,19 +134,5 @@ public class TodoServiceImpl implements TodoService {
         resultSet.setTotal((long) total);
 
         return resultSet;
-    }
-
-    private TodoVTO buildTodoVTO(Todo todo) {
-        TodoVTO todoVTO = new TodoVTO();
-        todoVTO.setId(todo.getId());
-        todoVTO.setTitle(todo.getTitle());
-
-        if (todo.getDetails() != null) {
-            todoVTO.setDescription(todo.getDetails().getDescription());
-            todoVTO.setPriority(todo.getDetails().getPriority());
-            todoVTO.setStatus(todo.getDetails().getStatus());
-        }
-
-        return todoVTO;
     }
 }
